--- a/basic-network/crypto-config.yaml
+++ b/basic-network/crypto-config.yaml
@@ -70,3 +70,18 @@ PeerOrgs:
     # ---------------------------------------------------------------------------
     Users:
       Count: 1
+
+# Org1 설정을 복사해 Org2, Org3 정의를 추가
+  - Name: Org2
+    Domain: org2.example.com
+    Template:
+      Count: 1
+    Users:
+      Count: 1
+
+  - Name: Org3
+    Domain: org3.example.com
+    Template:
+      Count: 1
+    Users:
+      Count: 1
